# DANCERS

./: .gitignore  .gitmodules  CITATION.cff  README.md
data/flocking_with_obstacles_3/: coordinator1.csv  coordinator2.csv  network_sim_data1.csv  network_sim_data2.csv  robot_sim_data1.csv  robot_sim_data2.csv
notebook/: carousel_data_analysis.ipynb  flocking_use_case_analysis.ipynb  validation_scalability.ipynb
src/: .gitignore  README.md
src/config/: config_1.yaml  (+16 more)
src/connector_core/: CMakeLists.txt  package.xml
src/connector_core/include/connector_core/: connector.hpp
src/coordinator/: CMakeLists.txt  package.xml
src/coordinator/include/coordinator/: udp_tcp_socket.hpp
src/coordinator/src/: coordinator.cpp
src/dancers_msgs/: CMakeLists.txt  package.xml
src/dancers_msgs/msg/: AgentState.msg  AgentStateArray.msg  AgentStruct.msg  AgentStructArray.msg  Neighbor.msg  NeighborArray.msg  NeighborIdQuality.msg  NeighborIdQualityArray.msg  Target.msg  VelocityHeading.msg  VelocityHeadingArray.msg
src/dancers_msgs/srv/: GetAgentVelocities.srv
src/empty_connector/: CMakeLists.txt  package.xml
src/empty_connector/src/: empty_connector_net.cpp  empty_connector_phy.cpp
src/flocking_control/: CMakeLists.txt  package.xml
src/flocking_control/src/: vat_controller.cpp  vat_controller.hpp  vat_controller_node.cpp
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/src/: gazebo_only.cpp  gazebo_sim.cpp
src/multirobot_control/: CMakeLists.txt  package.xml
src/multirobot_control/launch/: N_VAT_neighbors.launch.py
src/multirobot_control/src/: VAT_neighbors.cpp  pose_array_saver.cpp
src/network_connectors/ns3_connector/: CMakeLists.txt  package.xml
src/network_connectors/ns3_connector/include/ns3_connector/applications/: flocking-application.cpp  flocking-application.h  waypoint_broadcast.cpp  waypoint_broadcast.h
src/network_connectors/ns3_connector/src/: basic_wifi_adhoc.cpp  basic_wifi_adhoc_with_controller.cpp
src/network_simulators/ns-3_sim/: CMakeLists.txt  package.xml
src/network_simulators/ns-3_sim/include/ns-3_sim/: chain-flocking-application.cpp  flocking-application.cpp  flocking-application.h  udp_tcp_socket.hpp  wifi-application.cpp  wifi-application.h
src/network_simulators/ns-3_sim/include/ns-3_sim/util/: agent_util.hpp  compression_util.hpp  graph_traversal.hpp  ns3_structs.hpp  util.hpp
src/network_simulators/ns-3_sim/src/: adhoc_chain_flocking.cpp  carousel-use-case.cpp  fake_neighborhood.cpp  ns-3_sim.cpp  ns-3_sim_wifi_adhoc.cpp  ns3_sim_pseudo_routing.cpp  packet_success_exp.cpp  standard_wifi_network.cpp  wifi_flocking.cpp
src/ns-3_sim/: CMakeLists.txt  package.xml
src/ns-3_sim/include/ns-3_sim/: chain-flocking-application.cpp  chain-flocking-application.h  flocking-application.cpp  flocking-application.h  pick-neighbors-header.cpp  pick-neighbors-header.h  wifi-application.cpp  wifi-application.h
src/ns-3_sim/src/: adhoc_chain_flocking.cpp  fake_neighborhood.cpp  ns-3_only_adhoc.cpp  ns-3_only_adhoc_no_tap.cpp  ns-3_only_ap.cpp  ns-3_only_csma.cpp  ns-3_sim_adhoc.cpp  ns-3_sim_adhoc_no_tap.cpp  ns-3_sim_ap.cpp  ns-3_sim_csma.cpp  ns-3_sim_wifi_adhoc.cpp
src/offboard_flocking/: CMakeLists.txt
src/offboard_flocking/src/: VAT_neighbors.cpp
src/physics_connectors/Gazebo/gazebo_connector/: CMakeLists.txt  package.xml
src/physics_connectors/Gazebo/gazebo_connector/src/: gazebo_connector.cpp
src/physics_connectors/mini_dancers/: CMakeLists.txt  package.xml
src/physics_connectors/mini_dancers/src/: mini_dancers.cpp  mini_dancers_velocity.cpp
src/physics_simulators/Gazebo/gazebo_sim/: CMakeLists.txt
src/physics_simulators/Gazebo/gazebo_sim/src/: gazebo_sim.cpp
src/physics_simulators/Gazebo/offboard_flocking/: CMakeLists.txt  package.xml
src/physics_simulators/Gazebo/offboard_flocking/launch/: N_VAT_neighbors.launch.py  control.launch.py  turtles.py
src/physics_simulators/Gazebo/offboard_flocking/src/: VAT_UDP_flocking.cpp  VAT_flocking.cpp  VAT_flocking_bckp.cpp  VAT_neighbors.cpp  com_test_udp_broadcast.cpp  com_test_udp_socket.cpp  control_test.cpp  control_test_simple.cpp  flocking_control.cpp  gz_pos_saver.cpp  px4_pos_saver.cpp  simple_control_pos.cpp  simple_control_vel.cpp
src/physics_simulators/MiniDancers/flocking_controller/: CMakeLists.txt  package.xml
src/physics_simulators/MiniDancers/flocking_controller/include/flocking_controller/: agent_util.hpp  cuboid_obstacle_util.hpp  vat_controller.hpp
src/physics_simulators/MiniDancers/flocking_controller/src/: grid_path_planner.cpp  grid_path_planner.hpp  occupancy_grid.cpp  occupancy_grid.hpp  path_planner.hpp  vat_controller.cpp  vat_controller.hpp  vat_controller_node.cpp
src/physics_simulators/MiniDancers/mini_dancers/: CMakeLists.txt
src/physics_simulators/MiniDancers/mini_dancers/include/mini_dancers/: multirotor_model.hpp  udp_tcp_socket.hpp  util.hpp
src/physics_simulators/MiniDancers/mini_dancers/include/mini_dancers/command_algorithms/: VAT_flocking_controller.hpp
src/physics_simulators/MiniDancers/mini_dancers/include/mini_dancers/util/: agent_util.hpp  communication_util.hpp  flocking_util.hpp  obstacle_util.hpp  target_util.hpp  util.hpp
src/physics_simulators/MiniDancers/mini_dancers/src/: mini_dancers.cpp
src/physics_simulators/RobotSim/robotsim_connector/: CMakeLists.txt  package.xml
src/physics_simulators/RobotSim/robotsim_connector/src/: robotsim_connector.cpp
src/protobuf_msgs/: CMakeLists.txt  package.xml
src/protobuf_msgs/protobuf/: dancers_update.proto  network_update.proto  ordered_neighbors.proto  physics_update.proto  pose_vector.proto  robots_positions.proto  velocity_heading_vector.proto
src/px4_control/: CMakeLists.txt  package.xml
src/px4_control/src/: waypoint_control.cpp
src/px4_pilot/: CMakeLists.txt  package.xml
src/px4_pilot/include/px4_pilot/: mode.hpp
src/px4_pilot/src/: px4_pilot.cpp
src/scenario_manager/: CMakeLists.txt  package.xml
src/scenario_manager/src/: scenario_manager.cpp
src/tf2_cpp/: CMakeLists.txt  package.xml
src/tf2_cpp/src/: uav_tf2_broadcaster.cpp
(+168 files in other folders)
