<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dancers_msgs</name>
  <version>0.0.1</version>
  <description>Package with the ROS-messages used by the DANCERS co-simulator</description>
  <maintainer email="theotime.balaguer@gmail.com">Théotime Balaguer</maintainer>
  <author email="theotime.balaguer@gmail.com">Théotime Balaguer</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>ros_environment</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
