<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_sim</name>
  <version>1.0.0</version>
  <description>Gazebo Simulator for the DANCERS co-simulator</description>
  <maintainer email="theotime.balaguer@gmail.com">theotime</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>protobuf_msgs</depend>
  <depend>dancers_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
